--- a/covid/templates/openingclosing.html
+++ b/covid/templates/openingclosing.html
@@ -5,86 +5,59 @@
     <title>Title</title>
 </head>
 <script>
-    function display(datas) {
+    function display(data) {
         Highcharts.chart('openingclosingcontainer', {
             chart: {
-                type: 'column'
+                type: 'line'
             },
             title: {
-                text: 'Monthly Average Rainfall'
+                text: '5년 간 음식점 개업 수, 폐업 수'
             },
             subtitle: {
-                text: 'Source: WorldClimate.com'
+                text: 'Source: 인허가 데이터'
             },
             xAxis: {
-                categories: [
-                    'Jan',
-                    'Feb',
-                    'Mar',
-                    'Apr',
-                    'May',
-                    'Jun',
-                    'Jul',
-                    'Aug',
-                    'Sep',
-                    'Oct',
-                    'Nov',
-                    'Dec'
-                ],
-                crosshair: true
+                categories: data.index
             },
             yAxis: {
-                min: 0,
                 title: {
-                    text: 'Rainfall (mm)'
+                    text: 'Temperature (°C)'
                 }
             },
-            tooltip: {
-                headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
-                pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-                    '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
-                footerFormat: '</table>',
-                shared: true,
-                useHTML: true
-            },
             plotOptions: {
-                column: {
-                    pointPadding: 0.2,
-                    borderWidth: 0
+                line: {
+                    dataLabels: {
+                        enabled: true
+                    },
+                    enableMouseTracking: false
                 }
             },
             series: [{
-                name: 'Tokyo',
-                data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
-
+                name: 'opening',
+                data: data.opening
             }, {
-                name: 'New York',
-                data: [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3]
-
-            }, {
-                name: 'London',
-                data: [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2]
-
-            }, {
-                name: 'Berlin',
-                data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
-
+                name: 'closing',
+                data: data.closing
             }]
         });
     }
 
     function getdata() {
+        // display();
+
         $.ajax({
             url: 'openingclosings',
             datatype: 'JSON',
             success: function(data) {
-                console.log(data);
                 display(data);
+                console.log(data);
             }
         });
+
     };
 
     $(document).ready(function(){
+        console.log('호출');
         getdata();
     });
 </script>
