--- a/covid/templates/openingclosing.html
+++ b/covid/templates/openingclosing.html
@@ -11,7 +11,7 @@
                 type: 'line'
             },
             title: {
-                text: '5년 간 음식점 개업 수, 폐업 수'
+                text: 'COVID-19 기간 음식점 개업 수, 폐업 수'
             },
             subtitle: {
                 text: 'Source: 인허가 데이터'
@@ -21,7 +21,7 @@
             },
             yAxis: {
                 title: {
-                    text: 'Temperature (°C)'
+                    text: '일반 음식점 수'
                 }
             },
             plotOptions: {
@@ -33,10 +33,10 @@
                 }
             },
             series: [{
-                name: 'opening',
+                name: '개업',
                 data: data.opening
             }, {
-                name: 'closing',
+                name: '폐업',
                 data: data.closing
             }]
         });
@@ -57,22 +57,19 @@
     };
 
     $(document).ready(function(){
-        console.log('호출');
         getdata();
     });
 </script>
 <body>
 <main>
-   <h1>5년 간 음식점 개업 수, 폐업 수</h1>
    <div class="card mb-4">
       <div class="card-header">
           <i class="fas fa-chart-area me-1"></i>
-          Area Chart Example
+          일반 음식점
       </div>
       <div class="card-body">
          <div id="openingclosingcontainer" width="100%" height="30"></div>
       </div>
-      <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
   </div>
 </main>
 </body>
